# ATS-Vision-2024

./: CMakeLists.txt  REMEAD.md  main.cpp
autoaim/detector/inference/: inference.cpp  inference.hpp
autoaim/detector/param_struct/: enum.hpp  param_struct.hpp
autoaim/detector/spinning_detector/: spinning_detector.cpp  spinning_detector.hpp
autoaim/detector/tracker/: tracker.cpp  tracker.hpp
autoaim/predictor/armor_prediction/: armor_prediction.cpp  armor_prediction.hpp
autoaim/predictor/param/: enum.hpp  fitting.hpp  param_struct.hpp
camera/DaHeng/: GxCamera.cpp  GxCamera.h
camera/DaHeng/GxSDK/: GxIAPI.h
coordsolver/: coordsolver.cpp  coordsolver.hpp
filter/imm/: imm.cpp  imm.hpp
filter/kalman_filter/: kalman_filter.cpp  kalman_filter.hpp
filter/model_tool/: model_tool.cpp  model_tool.hpp
filter/motion_model/: motion_model.cpp  motion_model.hpp
filter/param_struct/: param_struct.hpp
filter/particle_filter/: particle_filter.cpp  particle_filter.hpp
serial/: seial.cpp  seial.hpp
thread/: thread.cpp  thread.hpp
tool/: enum.hpp  param_struct.hpp  tool.cpp  tool.hpp
